# Number of processes
option('nproc', type : 'integer', min : 1, max : 64, value : 4, yield : true)
# Number of time slots per hart.
option('ntimeslot', type : 'integer', min : 1, max : 1024, value : 32, yield : true)
# Amount of fuel per memory capability
option('nmemoryfuel', type : 'integer', min : 1, max : 256, value : 16, yield : true)
# Amount of fuel per time capability
option('ntimefuel', type : 'integer', min : 1, max : 256, value : 32, yield : true)
# Amount of fuel per monitor capability
option('nmonitorfuel', type : 'integer', min : 1, max : 256, value : 8, yield : true)
# Amount of fuel for initial ipc capability
option('nipcfuel', type : 'integer', min : 1, max : 256, value : 16, yield : true)
# Execution platform
option('platform', type : 'combo', choices : ['cheshire', 'cheshire2'], yield : true)
# Context switch padding 
option('cspad', type : 'integer', value : 0, yield : true)
