# Number of processes
option('nproc', type : 'integer', min : 1, max : 64, value : 4, yield : true)
# Number of time slots per hart.
option('ntimeslot', type : 'integer', min : 1, max : 1024, value : 32, yield : true)
# Amount of fuel per memory capability
option('nmemoryfuel', type : 'integer', min : 1, max : 256, value : 16, yield : true)
# Amount of fuel per time capability
option('ntimefuel', type : 'integer', min : 1, max : 256, value : 32, yield : true)
# Amount of fuel per monitor capability
option('nmonitorfuel', type : 'integer', min : 1, max : 256, value : 8, yield : true)
# Amount of fuel for initial ipc capability
option('nipcfuel', type : 'integer', min : 1, max : 256, value : 16, yield : true)
# Execution platform
option('platform', type : 'combo', choices : ['qemu_virt', 'cheshire', 'cheshire2'], yield : true)
# Context switch padding 
option('cspad', type : 'integer', value : 0, yield : true)
# Microseconds per time slot
option('timeslotus', type : 'integer', min : 1, max : 1000000, value : 1000, yield : true)

# SBI Version (3.0 specification)
option('sbi_spec_version', type : 'integer', value : '0x03000000')
# SBI Implementation ID (S3K implementation)
option('sbi_impl_id', type : 'integer', value : '0x53334B')
# SBI Implementation version (S3K version 2.0)
option('sbi_impl_version', type : 'integer', value : '0x02000000')
