sources = files(
  'exception.c',
  'head.S',
  'interrupt.c',
  'kernel.c',
  'kprintf.c',
  'proc.c',
  'rtc.c',
  'sched.c',
  'stack.S',
  'syscall.c',
  'trap.c',
  'trap.S',
  'cap/ipc.c',
  'cap/lock.c',
  'cap/monitor.c',
  'cap/ops.c',
  'cap/pmp.c',
  'cap/table.c',
  'cap/util.c',
  'smp/semaphore.c',
  'smp/taslock.c'
)
