# Number of processes
option('nproc', type : 'integer', value : 4)
# Number of time slots per hart.
option('ntimeslot', type : 'integer', value : 32)
# Amount of fuel per memory capability
option('nmemoryfuel', type : 'integer', value : 16)
# Amount of fuel per time capability
option('ntimefuel', type : 'integer', value : 32)
# Amount of fuel per monitor capability
option('nmonitorfuel', type : 'integer', value : 8)
# Amount of fuel for initial ipc capability
option('nipcfuel', type : 'integer', value : 16)
# Execution platform
option('platform', type : 'combo', choices : ['qemu_virt', 'cheshire', 'cheshire2'], value : 'qemu_virt')
# Context switch padding
option('cspad', type : 'integer', value : 18000)
